# simonwarchol.github.io

./: .gitignore  CNAME  README.md  _config.yml  bio.html  bun.lockb  index.html  mystylesheet.css  package-lock.json  package.json  resume.html  svelte.config.js  vite.config.ts
.github/workflows/: deploy.yml
.sass-cache/2abd4ebb18644c6f577da1f5d12b6f4bf5985b58/: base.scssc  button.scssc  dark.scssc  icons.scssc  modern-resume-theme.scssc  type.scssc
.sass-cache/ad8f02954af0a1cd217d755309b091f397cda687/: base.scssc  button.scssc  dark.scssc  icons.scssc  modern-resume-theme.scssc  type.scssc
_includes/: footer.html  header.html  section-list.html
_sass/: modern-resume-theme.scss
_site/: index.html
_site/assets/: main.css
_site/images/: profile.psd  profile_no_circle.ai
assets/: WarcholResume.docx
assets/css/: custom.css
home/: index.html
images/: profile.psd  profile_no_circle.ai  profile_no_circle.psd
profile_images/: profile.psd  profile_flat copy.psd
src/: app.html
src/lib/: params.ts
src/lib/components/: NavMenu.svelte  Portrait.svelte  PublicationCard.svelte
src/lib/components/Background/: Background.svelte  triangle.frag.wgsl  (+1 more)
src/lib/utils/: Assets.ts  Technologies.ts  helpers.ts  index.ts  types.ts
src/perlin-contours-rs/: Cargo.toml
src/perlin-contours-rs/src/: lib.rs  noise.glsl  shader.wgsl
src/routes/: +layout.svelte  +page.svelte
src/routes/awards/: +page.svelte
src/routes/median/: +page.js  +page.svelte
src/routes/publications/: +page.svelte
src/routes/resume/: +page.svelte
static/: profile.ai  simonos.ai
(+2 files in other folders)
